--- a/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/index.html
+++ b/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/index.html
@@ -45,13 +45,13 @@
 								data-toggle="dropdown">Mi cuenta <b class="caret"></b></a>
 								<ul class="dropdown-menu animated fadeInUp">
 									<li><a href="/admin/Profile" id="boton_nuevo_cs" class="btn">Perfil</a></li>
-									<li><a>
+									<li>
 											<form action="/user/close" method="post">
 												<input type="submit" id="boton_nuevo_cs" class="btn"
 													value="Cerrar sesión" /> <input type="hidden" name="_csrf"
 													value="{{token}}" />
 											</form>
-									</a></li>
+									</li>
 								</ul>
 							</li>
 						</ul>
@@ -80,13 +80,17 @@
 								class="caret pull-right "></span>
 						</a> <!-- Sub menu -->
 							<ul>
-								<li><a href="/admin/Profile" style="background-color: white" class="btn">Perfil</a></li>
-								<li><a>
-									<form action="/user/close" method="post">
+<li>
+									<form action="/admin/Profile" method="post" class="href-btn">
+                                    	<input type="submit" style="background-color: white" class="btn" value="Perfil" />  
+                                    	<input type="hidden" name="_csrf" value="{{token}}"/>                                  
+                                    	</form>
+                                    	</li>								<li>
+									<form action="/user/close" method="post" class="href-btn">
                                     	<input type="submit" style="background-color: white" class="btn" value="Cerrar sesión" />  
                                     	<input type="hidden" name="_csrf" value="{{token}}"/>                                  
                                     	</form>
-                                    	</a></li>
+                                    	</li>
 							</ul></li>
 					</ul>
 				</div>
