--- a/WADWolfram/src/main/resources/templates/register.html
+++ b/WADWolfram/src/main/resources/templates/register.html
@@ -119,7 +119,9 @@
                                     Haciendo click en <strong class="label label-primary">Regístrate</strong>, aceptas las <a href="#" data-toggle="modal" data-target="#t_and_c_m">condiciones y términos de uso</a> de esta página web, incluido el uso de cookies.
                                 </div>
                             </div>
-
+							{{#contraseñaIncorrecta}}
+                            <h5 style="color: red"><strong> ¡Las contraseñas deben coincidir! </strong></h5>
+                            {{/contraseñaIncorrecta}}
                             <hr class="colorgraph">
                             <div class="row">
                                 <div class="col-xs-12 col-md-6">
