Cleaning unusable things (USER)

--- a/WADWolfram/src/main/resources/templates/pay.html
+++ b/WADWolfram/src/main/resources/templates/pay.html
@@ -98,7 +98,7 @@
                                 </div>
                                 <div>
                                     <label for="exampleInputEmail1">Apellidos</label>
-                                    <input readonly class="form-control" id="exampleInputEmail1" placeholder="{{surname}}">
+                                    <input readonly class="form-control" id="exampleInputEmail1" placeholder="{{lastname}}">
                                 </div>
                                 {{/User}}
                                 <div class="form-group">
@@ -145,7 +145,7 @@
 
                                 <button type="submit" class="btn btn-primary btn-lg">Realizar Pago</button>
                             </div>
-                            <input type="hidden" name="_csrf" value="{{token}}"/>
+                            <input type="hidden" name="_csrf" value="{{token}}" />
                         </form>
                     </div>
                 </div>
@@ -212,7 +212,7 @@
                                 <li><a href="http://aswolfram.org/" target="_blank">Asociación Española para la Investigación y Ayuda al síndrome de Wolfram</a></li>
                                 <li><a href="http://www.eurordis.org/es/content/un-nuevo-registro-para-las-diabetes-raras" target="_blank">EURORDIS – Un nuevo registro para las diabetes raras</a></li>
                                 <li><a href="http://www.euro-wabb.org/es/" target="_blank">EURO-WABB</a></li>
-                             </ul>
+                            </ul>
                         </div>
                     </div>
                     <div class="col-sm-3 col-lg-3">
