little images from index

--- a/WADWolfram/src/main/resources/templates/index_template.html
+++ b/WADWolfram/src/main/resources/templates/index_template.html
@@ -124,7 +124,7 @@
                                     <ul class="recent">
                                         {{#news}}
                                         <li>
-                                            <a href="/new?id={{id}}"> <img src="/image/{{id}}.jpg" class="pull-left" alt="Foto de la noticia" /></a>
+                                            <a href="/new?id={{id}}"> <img src="/image/little{{id}}.jpg" class="pull-left" alt="Foto de la noticia" /></a>
                                             <h6><a href="/new?id={{id}}">{{title}}</a></h6>
                                         </li>
                                         {{/news}}
