--- a/WADWolframAngular/src/app/app.component.html
+++ b/WADWolframAngular/src/app/app.component.html
@@ -23,7 +23,7 @@
 
                                     <a [routerLink] class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Cuenta <i class="fa fa-angle-down"></i></a>
                                     <ul [ngbCollapse]="showMenu" class="dropdown-menu">
-                                        <li><!--<a [routerLink]="['/register']" routerLinkActive="active">Únete</a>-->Unete</li>
+                                        <li><a [routerLink]="['/register']" routerLinkActive="active">Únete</a></li>
                                         <li><!--<a [routerLink]="['/login']" routerLinkActive="active">Inicia sesión/Mi Cuenta</a>-->Mi Cuenta</li>
                                     </ul>
                                 </li>
