--- a/WADWolframAngular/src/app/app.component.html
+++ b/WADWolframAngular/src/app/app.component.html
@@ -17,14 +17,14 @@
                                 <li><a [routerLink]="['/index']">Inicio</a></li>
                                 <li><!--<a [routerLink]="['/projects']" routerLinkActive="active">Proyectos</a>-->Proyectos</li>
                                 <li><!--<a [routerLink]="['/news']" routerLinkActive="active">Noticias</a>-->Noticias</li>
-                                <li><!--<a [routerLink]="['/contact']" routerLinkActive="active">Contacto</a>-->Contacto</li>
+                                <li><a [routerLink]="['/contact']" routerLinkActive="active">Contacto</a></li>
                                 <li><a [routerLink]="['/about']" routerLinkActive="active">Sobre sus desarrolladores</a></li>
                                 <li class="dropdown"  (click)="showDropdown('loginMenu')" >
 
                                     <a [routerLink] class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Cuenta <i class="fa fa-angle-down"></i></a>
                                     <ul [ngbCollapse]="showMenu" class="dropdown-menu">
                                         <li><a [routerLink]="['/register']" routerLinkActive="active">Únete</a></li>
-                                        <li><!--<a [routerLink]="['/login']" routerLinkActive="active">Inicia sesión/Mi Cuenta</a>-->Mi Cuenta</li>
+                                        <li><a [routerLink]="['/login']" routerLinkActive="active">Inicia sesión/Mi Cuenta</a></li>
                                     </ul>
                                 </li>
                             </ul>
