--- a/WADWolframAngular/src/app/entities/index.component.html
+++ b/WADWolframAngular/src/app/entities/index.component.html
@@ -1,3 +1,72 @@
-<div>
-    aaaaaaabbbbbb
-</div>
+<section id="featured" class="bg">
+
+            <!-- start slider -->
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <!-- Slider -->
+                        <div id="main-slider" class="main-slider flexslider">
+                            <ul class="slides">
+                               <!-- {{#projects}}-->
+                                <li>
+                                    <img src="/imagep/{{id}}.jpg" alt="Foto del proyecto" />
+                                    <div class="flex-caption">
+                                        <h3>{{title}}</h3>
+                                        <p>{{shortDescription}}</p>
+                                        <!--cambiar lo de arriba-->
+                                        <!--<a href="/project?id={{id}}" class="btn btn-theme">Leer más</a>-->
+                                    </div>
+                                </li>
+
+                                <!--{{/projects}}-->
+                            </ul>
+                        </div>
+                        <!-- end slider -->
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="content">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="row">
+                            <div class="col-sm-6 col-lg-6">
+                                <h4>Sobre nuestra asociación</h4>
+                                <p>
+                                    Bienvenido a la página web donde podrás hacer tu aportación económica a proyectos médicos dirigidos a personas que padecen el Síndrome de Wolfram. Además, podrás hacer un seguimiento general de todos los proyectos y, por supuesto, de aquellos en los que has aportado. Regístrate de manera gratuíta para poder contribuir con la asociación. Para más información haz <a href="/about">click aquí</a>.
+                                </p>
+                                <br/>
+
+                                <h4>Colabora con nuestros proyectos</h4> <!--{{#percentages}}-->
+                                <div class="progress">
+                                    <div class="progress-bar progress-bar-info progress-bar-striped active" role="progressbar"  aria-valuemin="0" aria-valuemax="100">
+                                        {{title}}: {{percentage}}
+                                    </div>
+                                </div>
+                                <!--{{/percentages}}-->
+                                <div class="flex-caption">
+                                    <a href="/projects" class="btn btn-theme">¡Anímate y participa!</a>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 col-lg-6">
+                                <div class="widget" style="margin-left: 120px;">
+                                    <h4 class="widgetheading">Noticias de interés</h4>
+                                    <ul class="recent">
+                                        <!--{{#news}}-->
+                                        <li>
+                                            <a href="/new?id={{id}}"> <img src="/image/little{{id}}.jpg" class="pull-left" alt="Foto de la noticia" /></a>
+                                            <h6><a href="/new?id={{id}}">{{title}}</a></h6>
+                                        </li>
+                                        <!--{{/news}}-->
+
+                                    </ul>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
