--- a/WADWolframAngular/src/app/view/app_component.html
+++ b/WADWolframAngular/src/app/view/app_component.html
@@ -43,7 +43,7 @@
                             <ul class="nav navbar-nav">
                                 <li><a routerLink="/index" routerLinkActive="active">Inicio</a></li>
                                 <li><a routerLink="/projects" routerLinkActive="active">Proyectos</a></li>
-                                <li><a routerLink="/news" routerLinkActive="active">Noticias</a></li>
+                                <li><a routerLink="/blog" routerLinkActive="active">Noticias</a></li>
                                 <li><a routerLink="/contact" routerLinkActive="active">Contacto</a></li>
                                 <li><a routerLink="/about" routerLinkActive="active">Sobre sus desarrolladores</a></li>
                                 <li class="dropdown">
