--- a/WADWolframAngular/src/app/app.component.html
+++ b/WADWolframAngular/src/app/app.component.html
@@ -16,7 +16,7 @@
                                
                                 <li><a [routerLink]="['/index']">Inicio</a></li>
                                 <li><!--<a [routerLink]="['/projects']" routerLinkActive="active">Proyectos</a>-->Proyectos</li>
-                                <li><a[routerLink]="['/blog']" routerLinkActive="active">Noticias</a>Noticias</li>
+                                <li><a [routerLink]="['/blog']" routerLinkActive="active">Noticias</a></li>
                                 <li><a [routerLink]="['/contact']" routerLinkActive="active">Contacto</a></li>
                                 <li><a [routerLink]="['/about']" routerLinkActive="active">Sobre sus desarrolladores</a></li>
                                 <li class="dropdown"  (click)="showDropdown('loginMenu')" >
