Final blog and singleNew

--- a/WADWolframAngular/src/app/entities/blog.component.html
+++ b/WADWolframAngular/src/app/entities/blog.component.html
@@ -11,9 +11,9 @@
                                 <li>
                                     <div class="post-image">
                                         <div class="post-heading">
-                                            <h3><a href="/index"><!--{{title}}--></a></h3>
+                                            <h3><a href="/singleNew"><!--{{title}}--></a></h3>
                                         </div>
-                                  <a href="/index"><img src="../assets/img/icono.jpg" alt="Foto de la noticia" class="img-responsive" /></a>
+                                  <a href="/singleNew"><img src="../assets/img/icono.jpg" alt="Foto de la noticia" class="img-responsive" /></a>
                                       <!--   <div><a>{{cuerpo}}</a></div>  --> 
                                     </div>
                                     <div class="bottom-article">
@@ -21,7 +21,7 @@
                                             <li><i class="fa fa-calendar"></i><!--{{date}}--></li>
                                             <li><i class="fa fa-comments"></i><!--{{number_comments}}--> Comentarios</li>
                                         </ul>
-                                       <a href="/index" class="readmore pull-right">Ir a la noticia <i class="fa fa-angle-right"></i></a>
+                                       <a href="/singleNew" class="readmore pull-right">Ir a la noticia <i class="fa fa-angle-right"></i></a>
                                     </div>
                                 </li>
 
