--- a/WADWolframAngular/src/app/entities/singleNew.component-s.html
+++ b/WADWolframAngular/src/app/entities/singleNew.component-s.html
@@ -1,65 +1,46 @@
-﻿
-		<section id="content">
-			<div class="container">
-				<div class="row">
+﻿ <section id="content">
+            <div class="container">
+                <div class="row">
 <div class="col-lg-8">
-<article>
-   <div class="post-image">
-      <div class="post-heading">
-									<h3>{{new.title}}</h3>
-						</div>
-			   <img src="/image/{{new.id}}.jpg" alt="Foto de la noticia" class="img-responsive" />
-   </div>
-			{{{new.body}}}
-			<div class="bottom-article">
-			  	<ul class="meta-post">
-         <li><i class="fa fa-calendar"></i>{{new.date}}</li>
-									<li><i class="fa fa-comments"></i>{{new.number_comments}}	comentarios</li>
-						</ul>
-						<br> <br> 
-						<div class="well" *ngFor="let comment of comments">
-									<p>{{comment}}</p>
-   						<br> 
-						</div>
-			</div>
-</article>
-<div class="clear"></div>
-<div class="marginbot30"></div>
-<h4>Deja tu comentario</h4>
-por aquí:
-{{#logeado}}
-<h5 style="color: red">
-   <strong> ¡Debes iniciar sesión para poder comentar! </strong>
-</h5>
-<br> <br> 
-<a href="/login">Inicia sesión</a>
-{{/logeado}} 
-{{#logeado2}}
-<form role="form" action="/comment/upload/{{id}}" method="post">
-   <div class="form-group">
-      <textarea class="form-control" rows="8" placeholder="Comenta aquí" name="comentarios"></textarea>
-   </div>
-   <button type="submit" class="btn btn-theme btn-md">Comentar</button>
-  	<input type="hidden" name="_csrf" value="{{token}}" />
-</form>
-{{/logeado2}}
+   <article *ngFor="let new of news">
+      <header>{{new?.category}}</header>
+      <ul>
+         <li>
+            <div class="post-image">
+               <div class="post-heading">
+                  <h3><a [routerLink]="['/new', new.id]">{{new?.title}}</a></h3>
+               </div>
+               <a [routerLink]="['/new', new.id]"><img src="/image/{{new?.id}}.jpg" alt="Foto de la noticia" class="img-responsive" /></a>             
+            </div>
+            <div class="bottom-article">
+               <ul class="meta-post">
+                  <li><i class="fa fa-calendar"></i>{{new?.date}}</li>
+                  <li><i class="fa fa-comments"></i>{{new?.number_comments}} Comentarios</li>
+               </ul>
+               <a [routerLink]="['/new', new.id]" class="readmore pull-right">Ir a la noticia <i class="fa fa-angle-right"></i></a>
+            </div>
+         </li>
+      </ul>
+   </article>
 </div>
 <div class="col-lg-4">
-			<aside class="right-sidebar">
-      <div class="widget"></div>
+   <aside class="right-sidebar">
+      <!-- <div class="widget"></div> -->
       <div class="widget">
-  				   <h3>Categorías</h3>
-	 							<ul class="cat">
-     							<li><i class="fa fa-angle-right"></i>Enfermedad</li>
-  	  							<li><i class="fa fa-angle-right"></i>Asociación</li>
-   									<li><i class="fa fa-angle-right"></i>Nuevos	descubrimientos</li>
-   									<li><i class="fa fa-angle-right"></i>Proyectos</li>
-   									<li><i class="fa fa-angle-right"></i>Próximos eventos</li>
-								 </ul>
+         <h5 class="widgetheading">Categorías</h5>
+         <ul class="cat">
+por aquí:
+            <li><i class="fa fa-angle-right"></i><a href=/mostrarPorCategoria?categoria=Enfermedad>Enfermedad</a></li>
+            <li><i class="fa fa-angle-right"></i><a href=/mostrarPorCategoria?categoria=Asociación>Asociación</a></li>
+            <li><i class="fa fa-angle-right"></i><a href=/mostrarPorCategoria?categoria=NuevosDescubrimientos>Nuevos descubrimientos</a></li>
+            <li><i class="fa fa-angle-right"></i><a href=/mostrarPorCategoria?categoria=Proyectos>Proyectos</a></li>
+            <li><i class="fa fa-angle-right"></i><a href=/mostrarPorCategoria?categoria=PróximosEventos>Próximos eventos</a></li>
+         </ul>
       </div>
       <div class="widget"></div>
-			</aside>
+   </aside>
 </div>
-</div>
-			</div>
-		</section>
+   </div>
+            </div>
+
+        </section>
