--- a/WADWolframAngular/src/app/entities/projectsList.html
+++ b/WADWolframAngular/src/app/entities/projectsList.html
@@ -36,14 +36,14 @@
                                             <div class="cbp-caption-activeWrap">
                                                 <div class="cbp-l-caption-alignCenter">
                                                     <div class="cbp-l-caption-body">
-                                                        <a href=/project?id={{id}} class="cbp-l-caption-buttonRight" data-title="Proyecto<br>Fecha lanzamiento">Leer más</a>
+                                        <!--                <a href=/project?id={{id}} class="cbp-l-caption-buttonRight" data-title="Proyecto<br>Fecha lanzamiento">Leer más</a>-->
                                                     </div>
                                                 </div>
                                             </div>
                                         </div>
 
-                               <!--         <div class="cbp-l-grid-projects-title">{{title}}</div>-->
-                                        <div class="cbp-l-grid-projects-desc">Fecha lanzamiento: {{releaseDate}}</div>
+                               <!--         <div class="cbp-l-grid-projects-title">{{title}}</div>
+                                        <div class="cbp-l-grid-projects-desc">Fecha lanzamiento: {{releaseDate}}</div>-->
 
                                     </li>
                <!--                     {{/projects}}-->
