--- a/WADWolframAngular/src/app/app.component.html
+++ b/WADWolframAngular/src/app/app.component.html
@@ -15,6 +15,7 @@
                             <ul class="nav navbar-nav">
                                
                                 <li><a [routerLink]="['/index']">Inicio</a></li>
+                                 <li><a [routerLink]="['/project']" routerLinkActive="active">Proyectos</a></li>
                                 <li><a [routerLink]="['/blog']" routerLinkActive="active">Noticias</a></li>
                                 <li><a [routerLink]="['/contact']" routerLinkActive="active">Contacto</a></li>
                                 <li><a [routerLink]="['/about']" routerLinkActive="active">Sobre sus desarrolladores</a></li>
