continue doing projects and blog

--- a/WADWolframAngular/src/app/entities/blog.component.html
+++ b/WADWolframAngular/src/app/entities/blog.component.html
@@ -1,11 +1,11 @@
        
-        <section id="content">
+        <section class="content">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8">
                         <article>
-                            <!--{{#news}}-->
-                            <header><!--{{categoria}}--></header>
+                           <!-- {{#news}}-->
+                            <header>vengaaaaaaaaaaaaaaa<!--{{categoria}}--></header>
                             <ul>
 
                                 <li>
@@ -26,7 +26,7 @@
                                 </li>
 
                             </ul>
-                            <!--{{/news}}-->
+                        <!--    {{/news}}-->
                         </article>
 
                         <!--			<div id="pagination">
