bye bye warning

--- a/WADWolframAngular/src/app/entities/userDataPage.component.html
+++ b/WADWolframAngular/src/app/entities/userDataPage.component.html
@@ -35,7 +35,7 @@
                                 <!--{{#matchpass}}-->
                                 <h5 style="color: red"><strong> ¡Atención! Ningún cambio ha sido guardado porque la contraseña era incorrecta </strong></h5> 
                                 <!--{{/matchpass}}-->
-                                <h1>¡Bienvenid@ <!--{{username}}-->!</h1>
+                                <h1>¡Bienvenid@ {{user.username}}!</h1>
                                
                                 <div class="row hide" id="dataPage">
                                     <!--{{#User}}-->
